2004-03-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp (browser::browser):
	Removed unnecessary call to browser::load_url.

2004-03-14 Braden McDaniel  <braden@endoframe.com>

	Fixed crashes associated with subsequent calls to
	browser::load_url.

	* src/libopenvrml/openvrml/browser.cpp (scene::scene):  Throw
	no_alternative_url if no alternative URI can be resolved.
	* src/libopenvrml/openvrml/browser.h:  Added no_alternative_url
	exception.
	* src/libopenvrml/openvrml/system.cpp (system::http_fetch):
	Don't attempt to construct a std::string from a null pointer.

2004-03-13 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(anchor_node::do_render_child):  Fixed recursive call to
	child_node::render_child.

2004-03-13 Braden McDaniel  <braden@endoframe.com>

	Fixed "free" of stack memory.

	* src/libopenvrml/openvrml/doc.cpp
	* src/libopenvrml/openvrml/system.cpp
	* src/libopenvrml/openvrml/system.h

2004-03-11 Braden McDaniel  <braden@endoframe.com>

	Removed unused node_interface_id_equals function object.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-03-11 Braden McDaniel  <braden@endoframe.com>

	Fixed node_initerface_matches_field function object semantics to
	match exposedFields as well as fields.  This is consistent with
	the way node_interface_matches_eventin and
	node_interface_matches_eventout match exposedFields as well as
	eventIns and eventOuts, respectively.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-03-11 Braden McDaniel  <braden@endoframe.com>

	Fixed comparator for node_interface_set to properly guard
	against collisions between exposedField names and eventIn and
	eventOut names.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* test/Makefile.am
	* test/node_interface_set.cpp

2004-03-10 Braden McDaniel  <braden@endoframe.com>
